fixed size/alignment of ID table

--- a/src/main/resources/static/BlackJack.css
+++ b/src/main/resources/static/BlackJack.css
@@ -18,9 +18,11 @@
 .card {
     margin-right: 1rem;
     text-align: center;
+    width: 150px;
+    height: 200px;
 }
 
 .idTable {
     width: 200px;
-    text-align: right;
+    float: right;
 }
